--- a/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/PersonalCabinet/PersonalCabinet.cshtml
@@ -167,7 +167,7 @@
                     <tr>
                         <td class="broker-column">
                             <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" />
-                            <a target="_blank" href="http://panteon-finance.com/newMember/7138.html">Открыть ПАММ-счет</a>
+                            <a target="_blank" href="http://panteon-finance.com/newMember/7138.html">Открыть счет</a>
                         </td>
                         <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
