--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -48,24 +48,29 @@
     </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
-            <img src="@Url.Content("~/Content/img/instalogo.png")" style="margin-left: 125px; margin-top: 23px;"/>
+            <img src="@Url.Content("~/Content/img/2_30.jpg")" style="margin-left: 125px; margin-top: 23px; width: 235px;"/>
+            <span class="button">
+                <a href="http://fx-trend.com/new/home?agent=588607" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
+            </span>
+            <span>Партнерский код: <font>broccoli</font></span>
+        </div>
+    </div>
+    <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="broker" style="margin-top: 100px;">
+            <img src="@Url.Content("~/Content/img/mmcis-logo.png")" style="margin-left: 125px; margin-top: 23px; width: 235px;" />
+            <span class="button">
+                <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
+            </span>
+            <span>Партнерский код: <font>broccoli</font></span>
+        </div>
+    </div>
+    <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="broker" style="margin-top: 100px;">
+            <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" style="margin-left: 120px; margin-top: 15px; width: 235px;" />
             <span class="button">
                 <a href="https://secure.instaforex.com/open-account.aspx?lang=ru&x=broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
-        </div>
-        <div class="about-broker-container">
-            <h4>Преимущества Instaforex:</h4>
-            <ul class="about-broker">
-                <li>1. Никаких ограничений на размер счета и объем сделок.</li>
-                <li>2. Более 300 торговых символов.</li>
-                <li>3. FOREX, акции, фьючерсы и индексы.</li>
-                <li>4. Исполнение всех сделок за 1 секунду.</li>
-                <li>5. Плечо от 1:1 до 1:1000.</li>
-                <li>6. Возможность открытия Forex счетов без свопов.</li>
-                <li>7. Качественная техническая и консультационная поддержка 24/5.</li>
-            </ul>
-            <img src="@Url.Content("~/Content/img/depositphotos_5453471-Fruit-and-vegetable-alphabet.png")" style="right: 70px; top: -5px; width: initial;"/>
         </div>
     </div>
     <br/>
