--- a/new.broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Shared/Footer.cshtml
@@ -2,7 +2,8 @@
 <div class="footer-content">
     <ul class="links-container">
         <li><a href="@Url.Action("Index", "Home")">Главная</a></li>
-        <li><a href="@Url.Action("BroccoliOffer", "Home")">Предложение Брокколи</a></li>
+        <li><a href="@Url.Action("BroccoliOffer", "Home")">Калькулятор Брокколи</a></li>
+        <li><a href="@Url.Action("BrokerInfo", "Home")">Брокеры</a></li>
         <li><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с Нами</a></li>
     </ul>
     <p class="footer-text">
