--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -54,6 +54,11 @@
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
         </div>
+        <p class="broker-description">
+            Компания Forex Trend зарегистрирована в Новой Зеландии, FSPномер FSP268005<br />
+            Компания имеет право вести деятельность в сфере торговли на биржевых и внебиржевых рынках, инвестиций, управления средствами, ценными бумагами и инвестиционными портфелями.<br />
+            Данную информацию можно проверить на сайте регулятора.<br />
+        </p>
     </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
@@ -63,6 +68,16 @@
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
         </div>
+        <p class="broker-description">
+            Гарантии надежности европейского банка<br />
+            Минимальный депозит всего лишь 100$<br />
+            Отсутствие комиссии на СВОП<br />
+            Кредитное плечо от 1:50 до 1:500<br />
+            Выход на межбанковский рынок<br />
+            Спрэд - от 1 пункта без проскальзывания<br />
+            Бонус 50% на первый депозит до 1 000$<br />
+            Готовые торговые стратегии<br />
+        </p>
     </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
@@ -72,6 +87,10 @@
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
         </div>
+        <p class="broker-description">
+            Брокерская компания «Пантеон Финанс» специализируется на предоставлении услуг в сфере интернет-трейдинга и инвестиций.<br />
+            «Пантеон Финанс» дает своим клиентам возможность получать доходы, намного превышающие даже самые смелые банковские предложения по депозитам. Предлагает невероятно удобную и простую систему управления своими инвестициями. При этом, широкий выбор профессиональных управляющих и различных стратегий, позволяет инвесторам подбирать для себя самые комфортные способы получения прибыли.
+        </p>
     </div>
     <br/>
     <br/>
