--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -31,34 +31,23 @@
         </ul>
         <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.png")"/>
     </div>
-    <div class="trading-terms-container">
-        <h4>Торговые условия:</h4>
-        <ul class="trading-terms">
-            <li>Типы счетов: Cent, Classic, PAMM</li>
-            <li>Кредитное плечо от 1:10 до 1:500</li>
-            <li>Минимальный размер лота 0.01</li>
-            <li>Узкий плавающий спред</li>
-            <li>Исполнение ордеров Market Execution</li>
-            <li>Разрешена торговля советниками</li>
-            <li>Ликвидность 7 банков от BBO</li>
-            <li>Торговля Forex, Metals, CFD, Oil</li>
-            <li>Торговая платформа: MetaTrader 4</li>
-        </ul>
-        <img src="@Url.Content("~/Content/img/depositphotos_1374386-A-vegetarian-construction-isolated.jpg")"/>
-    </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
-            <img src="@Url.Content("~/Content/img/2_30.jpg")" style="margin-left: 125px; margin-top: 23px; width: 235px;"/>
+            <img src="@Url.Content("~/Content/img/2_30.jpg")" style="margin-left: 125px; margin-top: 23px; width: 235px;" />
             <span class="button">
                 <a href="http://fx-trend.com/new/home?agent=588607" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
         </div>
-        <p class="broker-description">
-            Компания Forex Trend зарегистрирована в Новой Зеландии, FSPномер FSP268005<br />
-            Компания имеет право вести деятельность в сфере торговли на биржевых и внебиржевых рынках, инвестиций, управления средствами, ценными бумагами и инвестиционными портфелями.<br />
-            Данную информацию можно проверить на сайте регулятора.<br />
-        </p>
+        <div class="about-broker-container">
+            <h4>Брокер Forex Trend:</h4>
+            <p class="broker-description about-broker">
+                Компания Forex Trend зарегистрирована в Новой Зеландии, FSPномер FSP268005<br />
+                Компания имеет право вести деятельность в сфере торговли на биржевых и внебиржевых рынках, инвестиций, управления средствами, ценными бумагами и инвестиционными портфелями.<br />
+                Данную информацию можно проверить на сайте регулятора.<br />
+            </p>
+            <img src="@Url.Content("~/Content/img/7410.png")" />
+        </div>
     </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
@@ -66,31 +55,37 @@
             <span class="button">
                 <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
             </span>
-            <span>Партнерский код: <font>broccoli</font></span>
         </div>
-        <p class="broker-description">
-            Гарантии надежности европейского банка<br />
-            Минимальный депозит всего лишь 100$<br />
-            Отсутствие комиссии на СВОП<br />
-            Кредитное плечо от 1:50 до 1:500<br />
-            Выход на межбанковский рынок<br />
-            Спрэд - от 1 пункта без проскальзывания<br />
-            Бонус 50% на первый депозит до 1 000$<br />
-            Готовые торговые стратегии<br />
-        </p>
+        <div class="about-broker-container">
+            <h4>Брокер MMCIS - преимущества:</h4>
+            <ul class="about-broker">
+                <li>1. Гарантии надежности европейского банка.</li>
+                <li>2. Минимальный депозит всего лишь 100$.</li>
+                <li>3. Отсутствие комиссии на СВОП.</li>
+                <li>4. Кредитное плечо от 1:50 до 1:500.</li>
+                <li>5. Выход на межбанковский рынок.</li>
+                <li>6. Спрэд - от 1 пункта без проскальзывания.</li>
+                <li>7. Бонус 50% на первый депозит до 1 000$.</li>
+                <li>8. Готовые торговые стратегии.</li>
+            </ul>
+            <img src="@Url.Content("~/Content/img/depositphotos_5453471-Fruit-and-vegetable-alphabet.png")" style="right: 70px; top: 25px; width: 230px;" />
+        </div>
     </div>
     <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
         <div class="broker" style="margin-top: 100px;">
             <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" style="margin-left: 120px; margin-top: 15px; width: 235px;" />
             <span class="button">
-                <a href="https://secure.instaforex.com/open-account.aspx?lang=ru&x=broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
+                <a href="http://panteon-finance.com/newMember/7138.html" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
             </span>
-            <span>Партнерский код: <font>broccoli</font></span>
         </div>
-        <p class="broker-description">
-            Брокерская компания «Пантеон Финанс» специализируется на предоставлении услуг в сфере интернет-трейдинга и инвестиций.<br />
-            «Пантеон Финанс» дает своим клиентам возможность получать доходы, намного превышающие даже самые смелые банковские предложения по депозитам. Предлагает невероятно удобную и простую систему управления своими инвестициями. При этом, широкий выбор профессиональных управляющих и различных стратегий, позволяет инвесторам подбирать для себя самые комфортные способы получения прибыли.
-        </p>
+        <div class="about-broker-container">
+            <h4>Брокер Пантеон Финанс:</h4>
+            <p class="broker-description about-broker">
+                Брокерская компания «Пантеон Финанс» специализируется на предоставлении услуг в сфере интернет-трейдинга и инвестиций.<br />
+                «Пантеон Финанс» дает своим клиентам возможность получать доходы, намного превышающие даже самые смелые банковские предложения по депозитам. Предлагает невероятно удобную и простую систему управления своими инвестициями. При этом, широкий выбор профессиональных управляющих и различных стратегий, позволяет инвесторам подбирать для себя самые комфортные способы получения прибыли.
+            </p>
+            <img src="@Url.Content("~/Content/img/depositphotos_1374386-A-vegetarian-construction-isolated.jpg")" style="width: 210px;top: 10px;right: 100px;" />
+        </div>
     </div>
     <br/>
     <br/>
