--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -269,7 +269,7 @@
                         будете получать ссылку на оплату, если Вам действительно покажется наша информация ценной, если она 
                         действительно изменит Вашу жизнь – Вы можете нам заплатить за эту ценность <strong>ЛЮБУЮ</strong> сумму, чтобы не нарушать 
                         поток ценности. Таким образом Вы ничем не рискуете, все риски лежат  на нас!<br />
-                        &emsp;&emsp;&emsp;Действуйте прямо сейчас, коллега! Кликните по кнопке «Зарегистрироваться»!<br />
+                        &emsp;&emsp;&emsp;Действуйте прямо сейчас, коллега! Кликните по кнопке «Регистрация»!<br />
                         &emsp;&emsp;&emsp;И добро пожаловать в мир людей, чьё время не продаётся за деньги, а деньги 
                         создают ещё больше денег!
                     </td>
