--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -18,7 +18,7 @@
         <span>Партнерский код: <font>broccoli</font></span>
     </div>
     <div class="about-broker-container">
-        <h4>Брокер ForexInn имеет ряд преимуществ — вот самые вкусные и полезные:</h4>
+        <h4>Брокер ForexInn:</h4>
         <ul class="about-broker">
             <li>1. Пополнение и снятие наличными в офисах.</li>
             <li>2. Нет внутренних курсов, конвертация по курсу ЦБ.</li>
