--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -44,7 +44,7 @@
             <p class="broker-description about-broker">
                 Компания Forex Trend зарегистрирована в Новой Зеландии, FSPномер FSP268005<br />
                 Компания имеет право вести деятельность в сфере торговли на биржевых и внебиржевых рынках, инвестиций, управления средствами, ценными бумагами и инвестиционными портфелями.<br />
-                Данную информацию можно проверить на сайте регулятора.<br />
+                Данную информацию можно проверить на сайте <a href="http://www.business.govt.nz/fsp/app/ui/fsp/version/searchSummaryCompanyFSP/FSP268005/1.do" target="_blank">регулятора</a>.<br />
             </p>
             <img src="@Url.Content("~/Content/img/7410.png")" />
         </div>
