--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
         </div>
         <div class="panel about-forex">
             <h4>Что вас ждет после регистрации?</h4>
-            <p>
+            <p style="padding-right: 200px; background: url(@Url.Content("~/Content/img/123123.jpg")) right no-repeat;">
                 &emsp;&emsp;&emsp;Что вас ждет после регистрации? 7 инструментов куда Вы можете начать инвестировать
                 имея от 100$. Таких как ПАММ-счета, структурные продукты, доверительное управление на
                 валютном рынке Forex.<br />
@@ -260,18 +260,20 @@
                         нахождению, тестированию, практическому применению действительно работающих методик мы уже сделали 
                         за Вас. Ваша задача – взять их и получить с их помощью такие же классные результаты.<br />
                         &emsp;&emsp;&emsp;Регистрация на нашем сайте и получение доступа ко всей этой информации пока бесплатна, 
-                        Вы спросите зачем нам отдавать её за просто так?
+                        Вы спросите зачем нам отдавать её за просто так?<br />
+                        &emsp;&emsp;&emsp;Мы будем выдавать Вам партнёрские ссылки на те инструменты, в которых мы будем получать от управляющих
+                        процент от Вашей прибыли, видите мы напрямую заинтересованы в Вашем успехе! Так же, в каждом письме Вы
+                        будете получать ссылку на оплату, если Вам действительно
                     </td>
                     <td class="devider"></td>
                     <td>
-                        Мы будем выдавать Вам партнёрские ссылки на те инструменты, в которых мы будем получать от управляющих 
-                        процент от Вашей прибыли, видите мы напрямую заинтересованы в Вашем успехе! Так же, в каждом письме Вы 
-                        будете получать ссылку на оплату, если Вам действительно покажется наша информация ценной, если она 
-                        действительно изменит Вашу жизнь – Вы можете нам заплатить за эту ценность <strong>ЛЮБУЮ</strong> сумму, чтобы не нарушать 
+                        покажется наша информация ценной, если она действительно изменит Вашу жизнь – Вы 
+                        можете нам заплатить за эту ценность <strong>ЛЮБУЮ</strong> сумму, чтобы не нарушать 
                         поток ценности. Таким образом Вы ничем не рискуете, все риски лежат  на нас!<br />
                         &emsp;&emsp;&emsp;Действуйте прямо сейчас, коллега! Кликните по кнопке «Регистрация»!<br />
                         &emsp;&emsp;&emsp;И добро пожаловать в мир людей, чьё время не продаётся за деньги, а деньги 
                         создают ещё больше денег!
+                        <img src="@Url.Content("~/Content/img/kubok.jpg")" style="margin-left: 130px; margin-top: 20px;" />
                     </td>
                 </tr>
             </table>
