--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -149,8 +149,7 @@
                         нашла их за вас, т.е. те фишки, которые действительно работают и приносят великолепные результаты
                         на практике.<br />
                         &emsp;&emsp;&emsp;Если вы выбираете второй вариант, то представляем вам эксклюзивную возможность сформировать свой 
-                        первый портфель прямо сейчас. Видеоотзывы клиентов, которые получили конкретные результаты и изменения 
-                        в своей жизни от изучения данных инструментов, вы можете увидеть сразу под этим текстом. 
+                        первый портфель прямо сейчас.
                     </td>
                 </tr>
             </table>
